--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "express": "^4.17.1",
+        "helmet": "^3.21.2",
         "knex": "^0.20.10",
         "sqlite3": "^4.1.1"
     }
